@@ -152,9 +152,6 @@ Attributes
     o   Clarify in 5.1 of vignette that attribute package features still
         require Makevars, etc. created by Rcpp.package.skeleton 
 
-    o   Provide single action to source both C++ and R code (possible
-        source_with attribute and/or embed R code in cpp file w/ comment)
-
     o   Add docstring parameter to Rcpp::export attribute
 
     o   Emit warning if sourceCpp finds no exports (control via option)
