@@ -39,6 +39,17 @@ sourceCpp(file = "", code = NULL, env = globalenv(),
     
     If the source file has compilation dependencies on other packages (e.g. \pkg{Matrix}, \pkg{RcppArmadillo}) then an \code{\link[=dependsAttribute]{Rcpp::depends}} attribute should be provided naming these dependencies. 
     
+    It's possible to embed chunks of R code within the C++ that will be sourced alone with the C++ functions. This is done by starting a block comment with the prefix of \code{/*** R}. For example:
+    
+\preformatted{
+/*** R
+
+# Call the fibonacci function defined in C++
+fibonacci(10)
+
+*/
+}
+    
     The \code{sourceCpp} function will not rebuild the shared library if the source file has not changed since the last compilation.
 }
 
@@ -50,6 +61,7 @@ sourceCpp(file = "", code = NULL, env = globalenv(),
     The \code{sourceCpp} function is designed for compiling a standalone source file whose only dependencies are R packages. If you are compiling more than one source file or have external dependencies then you should create an R package rather than using \code{sourceCpp}. Note that the \code{\link[=exportAttribute]{Rcpp::export}} attribute can also be used within packages via the \code{\link{compileAttributes}} function.
     
     If you are sourcing a C++ file from within the \code{src} directory of a package then the package's \code{LinkingTo} dependencies, \code{inst/include}, and \code{src} directories are automatically included in the compilation.
+
 }
 
 \seealso{
