@@ -60,7 +60,18 @@ namespace {
         if ( (quote == '\'' || quote == '\"') && (*(pStr->rbegin()) == quote) )
             *pStr = pStr->substr(1, pStr->length()-2);
     }
-      
+    
+    Rcpp::List regexMatches(Rcpp::CharacterVector lines, 
+                            const std::string& regex)
+    {
+        Rcpp::Environment base("package:base");
+        Rcpp::Function regexec = base["regexec"];
+        Rcpp::Function regmatches = base["regmatches"];
+        Rcpp::RObject result =  regexec(regex, lines);
+        Rcpp::List matches = regmatches(lines, result);
+        return matches;
+    }
+
 } // anonymous namespace
 
 namespace Rcpp {
@@ -231,12 +242,8 @@ namespace attributes_parser {
             
             // Scan for attributes 
             CommentState commentState;
-            Rcpp::Environment base("package:base");
-            Rcpp::Function regexec = base["regexec"];
-            Rcpp::Function regmatches = base["regmatches"];
-            Rcpp::RObject result =  regexec(
-                "^\\s*//\\s+\\[\\[Rcpp::(\\w+)(\\(.*?\\))?\\]\\]\\s*$", lines_);
-            Rcpp::List matches = regmatches(lines_, result);
+            Rcpp::List matches = regexMatches(lines_, 
+                "^\\s*//\\s+\\[\\[Rcpp::(\\w+)(\\(.*?\\))?\\]\\]\\s*$");
             for (int i = 0; i<matches.size(); i++) {   
                 
                 // track whether we are in a comment and bail if we are in one
@@ -272,6 +279,9 @@ namespace attributes_parser {
                     }
                 } 
             }
+            
+            // Parse embedded R
+            embeddedR_ = parseEmbeddedR(lines_, lines);
         }       
     }
    
@@ -567,6 +577,44 @@ namespace attributes_parser {
             
         return Type(type, isConst, isReference);
     }
+    
+     // Parse embedded R code chunks from a file (receives the lines of the 
+    // file as a CharcterVector for using with regexec and as a standard
+    // stl vector for traversal/insepection)
+    std::vector<std::string> SourceFileAttributes::parseEmbeddedR(
+                                    Rcpp::CharacterVector linesVector,
+                                    const std::deque<std::string>& lines) {
+        Rcpp::List matches = regexMatches(linesVector, 
+                                          "^\\s*/\\*{3,}\\s+[Rr]\\s*$");
+        bool withinRBlock = false;
+        CommentState commentState;
+        std::vector<std::string> embeddedR;
+                
+        for (int i = 0; i<matches.size(); i++) {   
+         
+            // track comment state
+            std::string line = lines[i];
+            commentState.submitLine(line);
+         
+            // is this a line that begins an R code block?
+            const Rcpp::CharacterVector match = matches[i];
+            bool beginRBlock = match.size() > 0;
+             
+            // check state and do the right thing
+            if (beginRBlock) {
+                withinRBlock = true;
+            } 
+            else if (withinRBlock) {
+                if (commentState.inComment())
+                    embeddedR.push_back(line);
+                else
+                    withinRBlock = false;
+            }
+        }
+          
+        return embeddedR;
+    }
+      
     
     // Validation helpers
     
