@@ -210,6 +210,11 @@ namespace attributes_parser {
             else
                 return false;            
         }
+        
+        // Get lines of embedded R code
+        const std::vector<std::string>& embeddedR() const {
+            return embeddedR_;
+        }
          
     private:
     
@@ -221,6 +226,9 @@ namespace attributes_parser {
         std::string parseSignature(size_t lineNumber);
         std::vector<std::string> parseArguments(const std::string& argText); 
         Type parseType(const std::string& text); 
+        std::vector<std::string> parseEmbeddedR(
+                                        Rcpp::CharacterVector linesVector,
+                                        const std::deque<std::string>& lines);
         
         // Validation helpers
         bool isKnownAttribute(const std::string& name) const; 
@@ -254,6 +262,7 @@ namespace attributes_parser {
         std::string sourceFile_;
         CharacterVector lines_;
         std::vector<Attribute> attributes_;
+        std::vector<std::string> embeddedR_;
         std::vector<std::string> roxygenBuffer_;
     };
 
